crates/plotnik-tests/tests/04-emit/bytecode/binding/anonymous_token_unknown.txt
Q = (function_declaration "xyzzy_fake_token") @fn
------------------ DIAGNOSTICS -------------------
error: `xyzzy_fake_token` is not a valid node kind
 --> query.ptk:1:28
  |
1 | Q = (function_declaration "xyzzy_fake_token") @fn
  |                            ^^^^^^^^^^^^^^^^
